Bunch of mistaken assumptions in the plugin configuration
- the cordova version of the project is actually 3.6.0. I am not sure where
  this is, but I'm not going to muck with it for now. Downgrading the target
  instead.
- The android-package has to actually include the classname not just the package name
- the target is the location in window..... where we can access the javascript
  module for the plugin. Changed it so that it is nicer -
  window.cordova.plugins.BEMLaunchNative instead of window.LaunchNative

--- a/plugin.xml
+++ b/plugin.xml
@@ -9,20 +9,20 @@
   <license>Modified BSD license</license>
 
   <engines>
-    <engine name="cordova" version=">=5.0.0"/>
+    <engine name="cordova" version=">=3.6.0"/>
   </engines>
 
   <asset src="www/launchnative.js" target="js/launchnative.js"/>
 
-  <js-module src="www/launchnative.js" name="bemlaunchnative">
-    <clobbers target="bemlaunchnative" />
+  <js-module src="www/launchnative.js" name="launchnative">
+    <clobbers target="cordova.plugins.BEMLaunchNative" />
   </js-module>
 
   <platform name="android">
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="LaunchNative">
-        <param name="android-package" value="edu.berkeley.eecs.emission.cordova.launchnative"/>
+        <param name="android-package" value="edu.berkeley.eecs.emission.cordova.launchnative.LaunchNative"/>
       </feature>
     </config-file>
 
